manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
  labels:
    app: calc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calc
  template:
    metadata:
      labels:
        app: calc
    spec:
      containers:
      - name: calculator
        image: shivamsherkar/calculator:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 5000
