manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  selector:
    app: calc
  ports:
    - port: 8080
      targetPort: 5000
